# Matrix

./: CMakeLists.txt  Determinant.c  Feeling.c  Interface.c  Minus.c  Multiplication.c  Print.c  Subtracting.c  Summ.c  Summarizing.c  Transposition.c  Zeros.c  matrix-B.txt  matrix.c  matrix.h  readme.md
